--- a/assets/styles/style.gg-dark.scss
+++ b/assets/styles/style.gg-dark.scss
@@ -14,6 +14,8 @@ $color-error:#CF6679;
 $color-on-error:#000000;
 
 $color-focus:#BB86FC;
+$color-on-focus:#000000;
 $color-disabled:#bdbdbd;
+$color-on-disabled:#000000;
 
 @import "./style.common.scss"
