--- a/assets/styles/style.gg-default.scss
+++ b/assets/styles/style.gg-default.scss
@@ -14,7 +14,9 @@ $color-error:#B00020;
 $color-on-error:#ffffff;
 
 $color-focus:#6200EE;
+$color-on-focus:#000000;
 $color-disabled:#bdbdbd;
+$color-on-disabled:#000000;
 
 
 @import "./style.common.scss"
