--- a/assets/styles/style.youwol.scss
+++ b/assets/styles/style.youwol.scss
@@ -14,7 +14,10 @@ $color-error:#B00020;
 $color-on-error:#ffffff;
 
 $color-focus:#ffbb00;
+$color-on-focus:#212529;
+
 $color-disabled:#bdbdbd;
+$color-on-disabled:#212529;
 
 
 @import "./style.common.scss"
