--- a/assets/styles/style.youwol.css
+++ b/assets/styles/style.youwol.css
@@ -88,8 +88,16 @@
   background-color: #ffbb00;
 }
 
+.fv-bg-on-focus {
+  background-color: #212529;
+}
+
 .fv-bg-disabled {
   background-color: #bdbdbd;
+}
+
+.fv-bg-on-disabled {
+  background-color: #212529;
 }
 
 .fv-text-primary {
@@ -136,8 +144,16 @@
   color: #ffbb00;
 }
 
+.fv-text-on-focus {
+  color: #212529;
+}
+
 .fv-text-disabled {
   color: #bdbdbd;
+}
+
+.fv-text-on-disabled {
+  color: #212529;
 }
 
 .fv-color-primary {
@@ -184,8 +200,16 @@
   border: solid 1px #ffbb00;
 }
 
+.fv-color-on-focus {
+  border: solid 1px #212529;
+}
+
 .fv-color-disabled {
   border: solid 1px #bdbdbd;
+}
+
+.fv-color-on-disabled {
+  border: solid 1px #212529;
 }
 
 .fv-pointer {
@@ -248,8 +272,16 @@
   background-color: #ffbb00;
 }
 
+.fv-bg-on-focus_active:active {
+  background-color: #212529;
+}
+
 .fv-bg-disabled_active:active {
   background-color: #bdbdbd;
+}
+
+.fv-bg-on-disabled_active:active {
+  background-color: #212529;
 }
 
 .fv-bg-primary_hover:hover {
@@ -296,8 +328,16 @@
   background-color: #ffbb00;
 }
 
+.fv-bg-on-focus_hover:hover {
+  background-color: #212529;
+}
+
 .fv-bg-disabled_hover:hover {
   background-color: #bdbdbd;
+}
+
+.fv-bg-on-disabled_hover:hover {
+  background-color: #212529;
 }
 
 .fv-bg-primary_focus:focus {
@@ -344,8 +384,16 @@
   background-color: #ffbb00;
 }
 
+.fv-bg-on-focus_focus:focus {
+  background-color: #212529;
+}
+
 .fv-bg-disabled_focus:focus {
   background-color: #bdbdbd;
+}
+
+.fv-bg-on-disabled_focus:focus {
+  background-color: #212529;
 }
 
 /*# sourceMappingURL=style.youwol.css.map */
