--- a/src/sass/style.common.scss
+++ b/src/sass/style.common.scss
@@ -100,6 +100,26 @@ $filters: (
     }
 }
 @each $nickName, $color in $colorsMap{
+    .fv-border-top-#{$nickName}{
+        border-top: solid 1px $color
+    }
+}
+@each $nickName, $color in $colorsMap{
+    .fv-border-bottom-#{$nickName}{
+        border-bottom: solid 1px $color
+    }
+}
+@each $nickName, $color in $colorsMap{
+    .fv-border-left-#{$nickName}{
+        border-left: solid 1px $color
+    }
+}
+@each $nickName, $color in $colorsMap{
+    .fv-border-right-#{$nickName}{
+        border-right: solid 1px $color
+    }
+}
+@each $nickName, $color in $colorsMap{
     .fv-fill-#{$nickName}{
         fill: $color
     }
@@ -125,6 +145,27 @@ $filters: (
         border: solid 1px $color
     }
 }
+@each $nickName, $color in $colorsMap{
+    .fv-hover-border-top-#{$nickName}:hover{
+        border-top: solid 1px $color
+    }
+}
+@each $nickName, $color in $colorsMap{
+    .fv-hover-border-bottom-#{$nickName}:hover{
+        border-bottom: solid 1px $color
+    }
+}
+@each $nickName, $color in $colorsMap{
+    .fv-hover-border-left-#{$nickName}:hover{
+        border-left: solid 1px $color
+    }
+}
+@each $nickName, $color in $colorsMap{
+    .fv-hover-border-right-#{$nickName}:hover{
+        border-right: solid 1px $color
+    }
+}
+
 .fv-pointer{
     cursor: pointer;
 }
@@ -132,6 +173,7 @@ $filters: (
 .fv-hover-opacity{
     transition: opacity 0.5s
 }
+
 .fv-hover-opacity:hover{
     opacity:1
 }
@@ -140,6 +182,13 @@ $filters: (
     transition: background-color 0.5s
 }
 
+.fv-hover-font-bolder:hover{
+    font-weight: bolder;
+}
+
+.fv-font-bolder{
+    font-weight: bolder;
+}
 
 @each $name, $color in $colorsMap{
     .fv-bg-#{$name}_active:active{
@@ -186,4 +235,13 @@ border:solid 1px $color-primary;
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
 background: $color-focus;
+}
+
+.fv-blink {
+    animation: blinker 1s linear infinite;
+}
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
 }
