--- a/src/sass/style.gg-dark.scss
+++ b/src/sass/style.gg-dark.scss
@@ -1,4 +1,7 @@
 
+$font-family-regular : 'Open Sans';
+$font-size-regular : 14px;
+
 $color-primary:#BB86FC;
 $color-primary-alt: #3700B3;
 $color-on-primary:#000000;
@@ -22,4 +25,4 @@ $color-on-focus:#000000;
 $color-disabled:#bdbdbd;
 $color-on-disabled:#000000;
 
-@import "./style.common.scss"
+@import "./style.common.scss";
