--- a/src/sass/style.youwol.scss
+++ b/src/sass/style.youwol.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+$font-family-regular : 'Open Sans';
+$font-size-regular : 14px;
 
 $color-primary:#f8f9fa;
 $color-primary-alt: darken($color-primary, 6.5%) ;
