💄      style.common.scss => add fv-box-shadow

--- a/src/sass/style.common.scss
+++ b/src/sass/style.common.scss
@@ -252,3 +252,9 @@ background: $color-focus;
         opacity: 0;
     }
 }
+
+/* Box shadow */
+
+.fv-box-shadow{
+box-shadow: rgb(0,0,0) 1px 3px 5px;
+}
